--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,10 @@
   "dependencies": {
     "@mantine/core": "^7.11.1",
     "@mantine/dropzone": "^7.11.1",
+    "@mantine/form": "^7.11.1",
     "@mantine/hooks": "^7.11.1",
-    "@tabler/icons-react": "^3.9.0",
-    "axios": "^1.7.2",
-    "next": "14.2.4",
+    "@tabler/icons-react": "^3.10.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -23,7 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
